--- a/login.html
+++ b/login.html
@@ -7,10 +7,39 @@
     <title>Login - Clínica IDW</title>
     <link rel="icon" type="image/png" href="./CSS/imagenes/IDW_S.A1-removebg-preview.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
-<body class="d-flex align-items-center justify-content-center" style="min-height: 100vh; background-color: #eef5f5;">
+<body>
+
+<header>
+  <div class="d-flex justify-content-between align-items-center w-100 px-3">
+    <a href="index.html">
+      <img src="./CSS/imagenes/IDW_S.A1-removebg-preview.png" alt="Logo Clinica IDW" style="height: 50px;">
+    </a>
+    <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Bienvenido a la Clinica IDW</h1>
+    <div class="d-flex align-items-center gap-2">
+      <!-- Botón de modo oscuro -->
+      <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button" title="Cambiar modo oscuro">
+        <i class="bi bi-moon-fill" id="darkModeIcon"></i>
+      </button>
+      <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+  <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
+    <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
+      <a href="index.html" class="nav-link">Inicio</a>
+      <a href="institucional.html" class="nav-link">Institucional</a>
+      <a href="contacto.html" class="nav-link">Contacto</a>
+      <a href="login.html" class="nav-link">Acceso Admin</a>
+    </nav>
+  </div>
+</header>
+
+<main class="d-flex align-items-center justify-content-center" style="min-height: calc(100vh - 150px); background-color: #eef5f5;">
 
     <div class="card p-4 shadow-sm" style="width: 100%; max-width: 400px;">
         <h2 class="text-center mb-3">Acceso Administrador</h2>
@@ -52,6 +81,12 @@
             }
         });
     </script>
+
+</main>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 
